# querychat

./: .gitignore  CLAUDE.md  Makefile  README.md  btw.md  package.json  pyproject.toml  reprex.py
.claude/: R-TESTING.md
.github/shiny-workflows/: package-install.sh
.github/workflows/: R-CMD-check.yml  docs-py-quartodoc.yml  docs-r-pkgdown.yml  js-check.yml  py-e2e-test.yml  py-release.yml  py-test.yml
docs/: index.html
docs/plans/: 2025-01-14-multi-table-design.md  2025-01-14-multi-table-impl.md  2026-04-17-datasource-reader-bridge-design.md  2026-04-17-datasource-reader-bridge.md
js/: build.mjs  check.mjs  package-lock.json  package.json  tsconfig.json
js/src/: artifact-core.ts  artifact.css  artifact.ts  dashboard-core.ts  dashboard.css  dashboard.ts  schema-display.js  viz-core.ts  viz-py.ts  viz-r.ts  viz.css
js/tests/: asset-targets.test.mjs
memory-bank/: README.md  artifact-feature.md
pkg-py/: CHANGELOG.md  README.md  STREAMLIT_IMPLEMENTATION.md  pyproject.toml
pkg-py/docs/: .gitignore  CHANGELOG.md  _brand.yml  _quarto.yml  build-dash.qmd  build-gradio.qmd  build-intro.qmd  build-streamlit.qmd  build.qmd  context.qmd  data-sources.qmd  greet.qmd  include-in-header.html  index.qmd  models.qmd  styles.scss  tools.qmd  visualize.qmd
pkg-py/examples/: 01-hello-app.py  02-prompt-app.py  03-sidebar-core-app.py  03-sidebar-express-app.py  04-streamlit-app.py  05-gradio-app.py  06-dash-app.py  07-gradio-custom-app.py  08-dash-custom-app.py  09-streamlit-custom-app.py  10-viz-app.py  11-dashboard-app.py  12-multi-table-express.py  app-database-sqlite.py  app-database.py  app-dataframe-pandas.py  app.py  greeting-viz.md  greeting.md  lazy_frame_demo.py
pkg-py/tests/: conftest.py  test_artifact_chat.py  test_artifact_data.py  test_artifact_gallery.py  test_artifact_generate_payload.py  test_artifact_modal.py  test_artifact_orchestrator.py  test_artifact_panel.py  test_artifact_prompt.py  test_artifact_readme.py  test_artifact_request.py  test_artifact_state.py  test_artifact_types.py  test_artifact_view.py  test_artifact_zip.py  test_base.py  test_client_console.py  test_dashboard_autogen.py  test_dashboard_cards.py  test_dashboard_context.py  test_dashboard_palette.py  test_dashboard_server.py  test_dashboard_state.py  test_dashboard_tools.py  test_dashboard_ui.py  test_dashboard_view.py  test_data.py  test_data_dict.py  test_dataframe_source.py  test_datasource.py  test_datasource_reader.py  test_deferred_client.py  test_deferred_datasource.py  test_deferred_shiny.py  test_df_compat.py  test_df_to_html.py  test_frameworks.py  test_ggsql.py  test_ggsql_integration.py  test_greeting.py  (+22 more)
pkg-r/: .Rbuildignore  .covrignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md  cran-comments.md  index.md
pkg-r/R/: DBISource.R  DataDict.R  DataFrameSource.R  DataSource.R  PinSource.R  QueryChat-class.R  QueryChat.R  QueryChatGreeter.R  QueryChatSystemPrompt.R  QueryExecutor.R  SnowflakeSource.R  TableAccessor.R  TblLazySource.R  TblSqlSource.R  data_source.R  deprecated.R  input_code_editor.R  prompt.R  querychat-package.R  querychat.R  querychat_app.R  querychat_card.R  querychat_client.R  querychat_greeting.R  querychat_learn.R  querychat_learn_tools.R  querychat_measures.R  querychat_module.R  querychat_tools.R  querychat_viz.R  schema_utils.R  sql_utils.R  staticimports.R  utils-check.R  utils-display.R  utils-duckdb.R  utils-ellmer.R  utils-html.R  utils-shiny.R  utils-shinychat.R
pkg-r/barret/: app.R
pkg-r/examples/: README.md  app-database.R
pkg-r/man/: DBISource.Rd  DataFrameSource.Rd  DataSource.Rd  PinSource.Rd  QueryChat.Rd  TableAccessor.Rd  TblLazySource.Rd  TblSqlSource.Rd  as_querychat_data_source.Rd  clean_sql.Rd  cleanup_source.Rd  code_editor_themes.Rd  create_data_source.Rd  create_system_prompt.Rd  data_dict.Rd  deprecated.Rd  df_to_schema.Rd  execute_ggsql.Rd  execute_query.Rd  extract_visualise_table.Rd  get_db_type.Rd  get_lazy_data.Rd  get_schema.Rd  get_schema_impl.Rd  has_layer_level_source.Rd  html_dependency_code_editor.Rd  input_code_editor.Rd  is_data_source.Rd  querychat-convenience.Rd  querychat-package.Rd  querychat_app.Rd  querychat_data_source.Rd  querychat_greeting.Rd  querychat_init.Rd  querychat_learn.Rd  querychat_server.Rd  querychat_system_prompt.Rd  querychat_ui.Rd  r_class_to_sql_type.Rd  read_data_dict.Rd  (+4 more)
pkg-r/pkgdown/: _brand.yml  _pkgdown.yml
pkg-r/tests/: testthat.R
pkg-r/vignettes/: build.Rmd  context.Rmd  data-sources.Rmd  greet.Rmd  models.Rmd  tools.Rmd  visualize.Rmd
py/: CHANGELOG.html  build-dash.html  build-gradio.html  build-intro.html  build-streamlit.html  build.html  context.html  data-sources.html  greet.html  index.html  models.html  robots.txt  search.json  sitemap.xml  tools.html  visualize.html
py/examples/: index.html  pandas.html  sqlite.html
py/includes/: github_models-callout.html  github_models.html
py/reference/: QueryChat.html  express.QueryChat.html  index.html  init.html  server.html  sidebar.html  system_prompt.html  tools.tool_query.html  tools.tool_reset_dashboard.html  tools.tool_update_dashboard.html  tools.tool_visualize.html  types.DataFrameSource.html  types.DataSource.html  types.SQLAlchemySource.html  types.ServerValues.html  ui.html
python-package/: Makefile  README.md  pyproject.toml
python-package/examples/: app-database.py  app-dataframe.py  app.py
python-package/querychat/: __init__.py  datasource.py  querychat.py
python-package/querychat/prompt/: prompt.md
python-package/src/querychat/: datasource.py  querychat.py
r/: 404.html  LICENSE-text.html  LICENSE-text.md  LICENSE.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
r-package/: .gitignore  DESCRIPTION  README.md
r-package/R/: datasource.R  querychat.R
r-package/examples/: app-database.R  database-setup.md
r-package/man/: querychat_init.Rd  querychat_server.Rd
r-package/tests/: test_database_source.R  test_querychat_server.R
r/articles/: build.html  build.md  (+13 more)
sandbox/: app-chaos.R  app-chaos.py  chaos.py  greeting.md
(+357 files in other folders)
